--- a/Android_Dev/Arivl/Application/src/main/AndroidManifest.xml
+++ b/Android_Dev/Arivl/Application/src/main/AndroidManifest.xml
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="utf-8"?><!--
-=======
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
->>>>>>> master
  Copyright 2013 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,19 +13,12 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<<<<<<< HEAD
-=======
-
-
-
->>>>>>> master
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.arivl"
     android:versionCode="1"
     android:versionName="1.0">
 
     <!-- Min/target SDK versions (<uses-sdk>) managed by build.gradle -->
-<<<<<<< HEAD
 
 
     <!--
@@ -47,13 +35,14 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:icon="@mipmap/arivl_logo"
         android:label="@string/app_name"
         android:theme="@style/Arivl_Materials">
-        <activity android:name=".WelcomeActivity"
-            android:theme="@style/AppTheme" >
+        <activity
+            android:name=".WelcomeActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -62,45 +51,14 @@
         </activity>
         <activity
             android:name=".DeviceScanActivity"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity android:name=".DeviceControlActivity" />
 
         <service
             android:name=".BluetoothLeService"
             android:enabled="true" />
 
-
+        <activity android:name=".check"></activity>
     </application>
 
 </manifest>
-=======
-    
-    <!-- Declare this required feature if you want to make the app available to BLE-capable
-    devices only.  If you want to make your app available to devices that don't support BLE,
-    you should omit this in the manifest.  Instead, determine BLE capability by using
-    PackageManager.hasSystemFeature(FEATURE_BLUETOOTH_LE) -->
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
-
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".DeviceScanActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".DeviceControlActivity"/>
-        <service android:name=".BluetoothLeService" android:enabled="true"/>
-    </application>
-
-</manifest>
->>>>>>> master
